# online_lidar_cam_calib

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
config/: kitti_online.yaml
samples/: CMakeLists.txt  auto_cali.cc  auto_cali_online.cc  auto_cali_weighted_var.cc  color_ptcloud.cc  comp_exp.cc  comp_exp_livox.cc  concat_cloud.cc  concat_cloud_livox.cc  cost_compute.cc  covis_data_check.cc  covis_data_livox.cc  covis_graph_test.cc  diff_err_cost.cc  diff_err_detection_exp.cc  diff_frame_num_cali_exp.cc  diff_frame_num_cali_exp_livox.cc  don_sample.cc  err_detection.cc  err_proj_vis.cc  err_torlance_exp.cc  extri_err_analysis.cc  extri_grid_search_exp.cc  grid_search_cali.cc  imgpyramid_test.cc  interp_test.cc  jacobian_selection.cc  map_minmax.cc  matplot_check.cc  odom_exp.cc  opencv_mat_val_test.cc  rand_sample.cc  single_cloud_dist_color.cc  variance_test.cc  vischeck_test.cc
src/: BASolver.cc  BASolver.hpp  CMakeLists.txt  CaliErrDetector.cc  CaliErrDetector.hpp  CovisDataPool.cc  CovisDataPool.hpp  CovisGraph.cc  CovisGraph.hpp  ImgPyramid.cc  ImgPyramid.hpp  ManualPhotoErr.cc  ManualPhotoErr.hpp  Misc.cc  Misc.hpp  Optimizer.cc  Optimizer.hpp  PhotoCali.cc  PhotoCali.hpp  PhotoCaliExRange.cc  PhotoCaliExRange.hpp  PhotoCaliOnline.cc  PhotoCaliOnline.hpp  Types.cc  Types.hpp
utils/: CMakeLists.txt  Config.cc  Config.hpp  DataBag.cc  DataBag.hpp  DataRecorder.cc  DataRecorder.hpp  Evaluator.cc  Evaluator.hpp  Rand.cc  Rand.hpp  StopWatch.cc  StopWatch.hpp  Utils.cc  Utils.hpp
